# autonomous-transportation-vehicle

Arduino GPS/: Arduino_GPS.c
Arduino GPS Server/: Arduino_GPS_Server.py
Controller Firmware/Inc/: config.h
Manual Drive/: manual_drive.py
Mobile Application/: settings.gradle.kts
Mobile Application/app/: build.gradle.kts
MobileApplication/gradle/wrapper/: gradle-wrapper.properties
OTONOM/gradle/: libs.versions.toml
ros2_ws/: frames_2025-07-04_16.16.17.gv  frames_2025-07-04_16.16.58.gv  frames_2025-07-04_16.51.55.gv  ozanv1.pgm  ozanv1.yaml  ylm.data
ros2_ws (hikmet bunu düzelt)/: ahmetemin.data  frames_2025-07-07_02.44.24.gv  hikmet.data  kose.data  koseee.pgm  koseee.yaml  okul2s.data  ozanv1.yaml  pose_goal_server.py
ros2_ws (hikmet bunu düzelt)/log/: latest_build
ros2_ws (hikmet bunu düzelt)/src/articubot_one/: CMakeLists.txt  package.xml
ros2_ws (hikmet bunu düzelt)/src/articubot_one/config/: mapper_params_online_async.yaml  nav2_params.yaml
ros2_ws (hikmet bunu düzelt)/src/articubot_one/description/: robot_core.xacro
ros2_ws (hikmet bunu düzelt)/src/articubot_one/launch/: baslat.launch.py  localization_launch.py  map_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
ros2_ws (hikmet bunu düzelt)/src/articubot_one/maps/: okul_s.pgm  okul_s.yaml
ros2_ws (hikmet bunu düzelt)/src/articubot_one/scripts/: cmdvel_hover.py  ultrasonic_sensor_node.py
ros2_ws (hikmet bunu düzelt)/src/articubot_one/scripts/install/: setup.bash
ros2_ws (hikmet bunu düzelt)/src/install/: setup.sh
ros2_ws (hikmet bunu düzelt)/src/log/: latest_build
ros2_ws (hikmet bunu düzelt)/src/manual_drive/: py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/articubot_one/: CMakeLists.txt  package.xml  (+1 more)
(+148 files in other folders)
